# lopengl

./: .gitignore  LICENSE  README.md  owo.txt
maxy/: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md  lsan.supp
maxy/include/common/: assets.hpp  buffers.hpp  camera.hpp  common.hpp  event_loop.hpp  geometry.hpp  gl_context.hpp  helpers.hpp  input.hpp  light.hpp  materials.hpp  mesh.hpp  model.hpp  shader.hpp  types.hpp  window_state.hpp
maxy/include/glad/: gl.h
maxy/src/: CMakeLists.txt
maxy/src/10/: CMakeLists.txt  camera_circle.cpp  camera_class.cpp  mouse_input.cpp  walk_around.cpp
maxy/src/12/: CMakeLists.txt  colors.cpp
maxy/src/12/shaders/: 12_colors.frag  12_colors.vert
maxy/src/13/: CMakeLists.txt  basic_light.cpp  ex_1.cpp  ex_2.cpp  ex_2_view.cpp  ex_3.cpp
maxy/src/13/shaders/: 13_cube.frag  13_cube.vert  13_cube_gouraud.frag  13_cube_gouraud.vert  13_cube_view.frag  13_cube_view.vert
maxy/src/14/: CMakeLists.txt  ex_1.cpp  ex_2.cpp  imgui.cpp  lighting.cpp  materials.cpp  strobe.cpp
maxy/src/14/shaders/: 14_light.vert  14_view.frag  14_view_light_t.frag  14_view_light_t.vert
maxy/src/15/: CMakeLists.txt  diffuse_map.cpp  emission_map.cpp  ex_2.cpp  light_controls.cpp  specular_map.cpp
maxy/src/15/shaders/: 15_ex_2.frag  15_light.frag  15_view.frag  15_view_emission.frag  15_view_specular.frag  15_view_specular.vert
maxy/src/16/: CMakeLists.txt  directional.cpp  positional.cpp  spot.cpp
maxy/src/16/shaders/: 16_directional.frag  16_directional.vert  16_light.frag  16_light_spot.frag  16_positional.frag  16_positional.vert  16_spot.frag  16_spot.vert
maxy/src/17/: CMakeLists.txt  ex_1.cpp  multiple.cpp
maxy/src/17/shaders/: 17_light.frag  17_light.vert  17_multiple.frag
maxy/src/21/: CMakeLists.txt  model.cpp
maxy/src/21/shaders/: 21_model.vert
maxy/src/22/: CMakeLists.txt  depth.cpp  linear.cpp  multi_light.cpp
maxy/src/22/shaders/: 22_linear.frag  22_multiple.frag  22_multiple.vert
maxy/src/23/: CMakeLists.txt  stencil.cpp
maxy/src/23/shaders/: 23_border.frag  23_border.vert  23_depth.frag  23_stencil.frag
maxy/src/24/: CMakeLists.txt  grass.cpp  multi_light_windows.cpp  windows.cpp
maxy/src/24/shaders/: 24_grass.frag  24_lit.frag  24_lit.vert
maxy/src/25/: CMakeLists.txt  cull.cpp
maxy/src/25/shaders/: 25_lit.vert
maxy/src/26/: CMakeLists.txt  framebuffer.cpp  framebuffer_mirror.cpp
maxy/src/26/shaders/: 26_framebuffer.frag  26_framebuffer.vert  26_light_marker.frag  26_lit.frag
maxy/src/27/: CMakeLists.txt  environment.cpp  skybox.cpp
maxy/src/27/shaders/: 27_framebuffer.frag  27_framebuffer.vert  27_light_marker.frag  27_light_marker.vert  27_lit.frag  27_lit.vert  27_lit_ref.frag  27_lit_ref.vert  27_skybox.frag  27_skybox.vert
maxy/src/29/: CMakeLists.txt  ubo.cpp
maxy/src/29/shaders/: 29_ubo.vert  29_ubo_blue.frag  29_ubo_green.frag  29_ubo_red.frag
maxy/src/30/: CMakeLists.txt  exploding.cpp  houses.cpp  normals.cpp
maxy/src/31/: CMakeLists.txt  asteroids.cpp  instanced.cpp  quads.cpp
maxy/src/32/: CMakeLists.txt  msaa.cpp  offscreen.cpp
maxy/src/4/: CMakeLists.txt  hello_window.cpp
maxy/src/5/: CMakeLists.txt  hello_triangle.cpp  hello_triangles.cpp
maxy/src/6/: CMakeLists.txt  attributes.cpp  shader_share.cpp  shaders_class.cpp  uniforms.cpp
maxy/src/7/: CMakeLists.txt  combined.cpp  texture.cpp  texture_disco.cpp
maxy/src/8/: CMakeLists.txt  trying_glm.cpp
maxy/src/9/: CMakeLists.txt  going_3d.cpp  more_3d.cpp  more_cubes.cpp
maxy/src/common/: assets.cpp  buffers.cpp  gl_context.cpp  helpers.cpp  light.cpp  materials.cpp  mesh.cpp  model.cpp  shader.cpp  shader.hpp
maxy/src/ex_10.10/: 1.cpp  2.cpp  CMakeLists.txt
maxy/src/ex_5.8/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
maxy/src/ex_6.8/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
maxy/src/ex_7.8/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt
maxy/src/ex_8.19/: 1.cpp  2.cpp  CMakeLists.txt
maxy/src/ex_9.9/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
maxy/src/lo01/: main.cpp
maxy/src/queries/: main.cpp
maxy/src/sdl3_04/: CMakeLists.txt  hello_window.cpp
maxy/src/sdl3_05/: CMakeLists.txt  ex_5_8_1.cpp  ex_5_8_2.cpp  ex_5_8_3.cpp  hello_triangle.cpp  hello_triangles.cpp  rotating_triangle.cpp
maxy/src/sdl3_06/: CMakeLists.txt  attributes.cpp  ex_6_8_1.cpp  ex_6_8_2.cpp  ex_6_8_3.cpp  shader_share.cpp  shaders_class.cpp  uniforms.cpp
maxy/src/sdl3_07/: CMakeLists.txt  combined.cpp  ex_7_8_1.cpp  ex_7_8_2.cpp  ex_7_8_3.cpp  ex_7_8_4.cpp  texture.cpp  texture_disco.cpp
maxy/src/sdl3_08/: CMakeLists.txt  ex_8_19_1.cpp  ex_8_19_2.cpp  trying_glm.cpp
maxy/src/sdl3_09/: CMakeLists.txt  ex_9_9_1.cpp  ex_9_9_2.cpp  ex_9_9_3.cpp  going_3d.cpp  more_3d.cpp  more_cubes.cpp  more_cubes_chaotic.cpp
maxy/src/sdl3_10/: CMakeLists.txt  camera_circle.cpp  camera_class.cpp  ex_10_10_1.cpp  ex_10_10_2.cpp  mouse_input.cpp  walk_around.cpp
maxy/src/sdl3_12/: CMakeLists.txt  colors.cpp
maxy/src/sdl3_13/: CMakeLists.txt  basic_light.cpp  ex_1.cpp  ex_2.cpp  ex_2_camrel.cpp  ex_2_view.cpp  ex_3.cpp  ex_camrel_loop.cpp
maxy/src/sdl3_14/: CMakeLists.txt  ex_1.cpp  ex_2.cpp  imgui.cpp  lighting.cpp  materials.cpp  strobe.cpp
maxy/src/sdl3_15/: CMakeLists.txt  diffuse_map.cpp  emission_map.cpp  emission_pulse.cpp  ex_2.cpp  light_controls.cpp  specular_map.cpp
maxy/src/sdl3_16/: CMakeLists.txt  directional.cpp  positional.cpp  spot.cpp
maxy/src/sdl3_17/: CMakeLists.txt  ex_1.cpp  multiple.cpp
maxy/src/sdl3_21/: CMakeLists.txt  model.cpp
maxy/src/sdl3_22/: CMakeLists.txt  depth.cpp  linear.cpp  multi_light.cpp
maxy/src/sdl3_23/: CMakeLists.txt  stencil.cpp
maxy/src/sdl3_24/: CMakeLists.txt  grass.cpp  multi_light_windows.cpp  windows.cpp
maxy/src/sdl3_25/: CMakeLists.txt  cull.cpp
maxy/src/sdl3_26/: CMakeLists.txt  framebuffer.cpp  mirror.cpp  split_view.cpp
maxy/src/sdl3_27/: CMakeLists.txt  environment.cpp  infinity_mirror.cpp  inter_reflection.cpp  skybox.cpp
maxy/src/sdl3_29/: CMakeLists.txt  ubo.cpp
maxy/src/sdl3_engine/: CMakeLists.txt  engine.cpp  engine.hpp  geometry.hpp  lights.hpp  model.cpp  model.hpp
(+509 files in other folders)
