chapter_shaders()

add_executable(ex_7.8.1 1.cpp)
target_link_libraries(ex_7.8.1 ${LIBS})

add_executable(ex_7.8.2 2.cpp)
target_link_libraries(ex_7.8.2 ${LIBS})

add_executable(ex_7.8.3 3.cpp)
target_link_libraries(ex_7.8.3 ${LIBS})

add_executable(ex_7.8.4 4.cpp)
target_link_libraries(ex_7.8.4 ${LIBS})
